v0.14.0/_sources/projections/misc/misc_van_der_grinten.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_van_der_grinten.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_misc_misc_van_der_grinten.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_van_der_grinten.py:


Van der Grinten projection
==========================

The Van der Grinten projection, presented by Alphons J. van der Grinten in
1904, is neither equal-area nor conformal. Central meridian and Equator are
straight lines; other meridians are arcs of circles. The scale is true along
the Equator only. Its main use is to show the entire world enclosed in a
circle.

**v**\ [*lon0/*]\ *scale* or **V**\ [*lon0/*]\ *width*

The projection is set with **v** or **V**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 18-24



.. image-sg:: /projections/misc/images/sphx_glr_misc_van_der_grinten_001.png
   :alt: misc van der grinten
   :srcset: /projections/misc/images/sphx_glr_misc_van_der_grinten_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="V12c", frame="afg", land="ivory", water="bisque4")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.244 seconds)


.. _sphx_glr_download_projections_misc_misc_van_der_grinten.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: misc_van_der_grinten.ipynb <misc_van_der_grinten.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: misc_van_der_grinten.py <misc_van_der_grinten.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: misc_van_der_grinten.zip <misc_van_der_grinten.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
